# CLIB

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  clang-format
cimg/: CImg.h
cmake/: doctest.cmake
configs/: polyfit_coeffs.hpp
doc/: CMakeLists.txt  Doxyfile.in
include/clib/: Fixedpoint.hpp  Flexfixed.hpp  Flexfloat.hpp  ImgView.hpp  README.md  Uint32.hpp  VideoInterface.hpp  VideoView.hpp  common.hpp  converter.hpp  header.hpp  image.hpp  img_algorithms.hpp  logs.hpp  polyfit.hpp  pybind.hpp  synth.hpp  video.hpp
online/: clib_example.cpp
src/clib/: FixedPoint.cpp  Fixedpoint.cpp  Flexfixed.cpp  Flexfloat.cpp  ImgView.cpp  Uint32.cpp  VideoView.cpp  converter.cpp  image.cpp  logs.cpp  source.cpp  synth.cpp  video.cpp
test/: CMakeLists.txt  test_main.cpp
test/clib/: Flexfloat.cpp  Image.cpp  common.hpp  test.cpp
